[Finishes #180634357, #180639703] Addressed bugs for view buttons not collapsing correctly as well as the resizing of thumbs on the thumbs view - all buttons/pictures retain correct position now.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,7 +183,7 @@ input[type='search'] {
   line-height:0rem;
   display:inline-flex;
   flex-wrap: wrap;
-  width: 1000px;
+  width: 100%;
   height:40px;
   vertical-align:middle;
   margin-bottom:20px;
@@ -248,7 +248,8 @@ input[type='search'] {
 .catalog ul {
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
+  /*flex-wrap: wrap;*/
+
 }
 
 .catalog li {
